--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.1.0",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.54.2",
