--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "lottie-react": "^2.4.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
     "sweetalert2": "^11.15.10"
   },
