--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
@@ -24,6 +25,7 @@
     "react-icons": "^5.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
+    "react-tabs": "^6.1.0",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
