--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
@@ -26,6 +28,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
     "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.3",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
